fixed wysiwyg button color, overflow on log, alert on createChore

--- a/client/stylesheets/custom.css
+++ b/client/stylesheets/custom.css
@@ -3,6 +3,10 @@ h3 {
   cursor: pointer; 
 }
 
+.modal-body > .container {
+  width: inherit;
+}
+
 .popover {
   min-width: 200px;
 }
